--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "axios": "^1.12.2",
     "pinia": "^3.0.3",
-    "vue": "^3.5.22"
+    "vue": "^3.5.22",
+    "vue-awesome-paginate": "^1.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
